# remoteit

./: .env.example  .gitignore  package-lock.json  package.json  setup.sh
agent/: create-icon.js  main.js  package-lock.json  package.json  preload.js
agent/renderer/: app.js  index.html  styles.css  toolbar.html
agent/src/: app.js  index.html  input.js  styles.css  toolbar.html
agent/src-tauri/: Cargo.toml  tauri.conf.json
agent/src-tauri/src/: lib.rs
client/: index.html  package.json
client/src/: App.tsx  index.css
client/src/api/: admin.ts  auth.ts  client.ts  sessions.ts
client/src/components/dashboard/: ActiveSessionCard.tsx  ActiveSessionsPage.tsx  CodeEntryForm.tsx  ConnectionStatus.tsx  DashboardPage.tsx  LoginPage.tsx  SessionHistoryPage.tsx  SessionViewer.tsx  SettingsPage.tsx  TeamPage.tsx
client/src/components/layout/: Navbar.tsx  ProtectedRoute.tsx
client/src/components/support/: CountdownTimer.tsx  ScreenShareButton.tsx  SessionCodeDisplay.tsx  StatusIndicator.tsx  SupportPage.tsx
client/src/context/: AuthContext.tsx
client/src/hooks/: useSocket.ts  useWebRTC.ts
server/: package.json
server/src/: index.ts
server/src/config/: db.ts  env.ts
server/src/db/: migrate.ts  reset-password.ts  schema.sql  seed.ts
server/src/middleware/: auth.ts  rateLimiter.ts
server/src/routes/: admin.routes.ts  auth.routes.ts  session.routes.ts  stats.routes.ts
server/src/services/: audit.service.ts  auth.service.ts  session.service.ts
server/src/signaling/: handlers.ts  sessionStore.ts  socketServer.ts
server/src/utils/: codeGenerator.ts  turnCredentials.ts
technician/: package-lock.json  package.json
technician/src/: index.html  styles.css  toolbar.html
technician/src-tauri/: Cargo.toml  tauri.conf.json
technician/src-tauri/capabilities/: default.json
technician/src-tauri/src/: lib.rs
technician/src/js/: api.js  app.js  auth.js  chat-panel.js  clipboard-sync.js  dashboard.js  file-transfer.js  notes-panel.js  session.js  socket-manager.js  system-info-panel.js  webrtc-manager.js
