[package]
name = "numbers10-support"
version = "1.0.0"
description = "Numbers10 IT Support - Client Agent"
authors = ["Numbers10 IT <joe@numbers10.co.za>"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
base64 = "0.22"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
]

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
