[package]
name = "numbers10-support-admin"
version = "1.0.0"
description = "Numbers10 Support Admin - Technician App"
authors = ["Numbers10 IT <joe@numbers10.co.za>"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
base64 = "0.22"
dirs = "5"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
